<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Magic Life Counter</string>
    <string name="action_settings">Settings</string>
    <string name="button_click">Add Player +</string>
    <string name="player">Name of player </string>
    <string name="lifetotal">Life total = </string>
    <string name="button_add_one">+</string>
    <string name="button_sub_one">-</string>
    <string name="button_add_five">+5</string>
    <string name="button_sub_five">-5</string>
</resources>
