 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        tools:context=".MainActivity"
     class="edu.washington.gnn2.lifecounter.MainActivity">
        <LinearLayout
            android:id="@+id/person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >
            <EditText android:id="@+id/player"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight=".5"
                android:hint="@string/player"
                android:textSize="20dp"
                android:paddingRight="5dp"

                />
            <TextView android:id="@+id/lifetotal"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight=".5"
                android:text="@string/lifetotal"
                android:textSize="20dp"
                android:textAlignment="center"
                />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/buttonaddone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/button_add_one"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:textColor="#CC0000"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onClick"/>

        <Button android:id="@+id/buttonaddfive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/button_add_five"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:textColor="#CC0000"
            android:onClick="onClick" />

        <Button android:id="@+id/buttonsubone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/button_sub_one"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:textColor="#CC0000"
            android:onClick="onClick"
            />

        <Button android:id="@+id/buttonsubfive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/button_sub_five"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:textColor="#CC0000"
            android:onClick="onClick"
            android:layout_alignParentRight="true"
            />

        </LinearLayout>
    </LinearLayout>
